# scNAT

./: CITATION.cff.md  README.md  pyproject.toml  setup.cfg  setup.py
data/concat_MS_ResPAN_sub4000/: concat_MS_ResPAN_sub4000.csv
scNAT/: main.py
scNAT/functions/: Layers.py  data_processing.py  feature_enrich.py  utils_f.py  utils_s.py
tutorials/: scNAT_tutorial.ipynb
