[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scNAT_biqing-zhu"
version = "0.0.1"
authors = [
  { name="Biqing Zhu", email="biqing.zhu@yale.edu" },
]
description = "A deep learning method for integrating paired single cell RNA and T cell receptor sequencing profiles"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/biqing-zhu/scNAT"
