[metadata]
name = aesthetic_ascii
version = 0.0.1
author = Biqing Zhu
author_email = biqing.zhu@yale.edu
description = A deep learning method for integrating single cell RNA and the paired T cell receptor sequencing profiles
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/biqing-zhu/scNAT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
